--- a/相机模型.md
+++ b/相机模型.md
@@ -12,7 +12,9 @@
 
 2、三种变换：刚体变换、透视变换、仿射变换
 
-![2df7e4e987259bc6d2111002f7bb18f4.png](image/2df7e4e987259bc6d2111002f7bb18f4.png)
+<p align='center'>
+<img src='image/2df7e4e987259bc6d2111002f7bb18f4.png' title='images' style='max-width:600px'></img>
+</p>
 
 世界坐标系到相机坐标系的变换称为刚体变换，不发生形变
 
